# Sentinel_RTOS

./: .gitignore  README.md
edge_node_pico/: CMakeLists.txt
edge_node_pico/src/: main.c  sensor_mpu6050.c  sensor_mpu6050.h
security_hub_stm32/: .cproject  .mxproject  .project  security_hub_stm32.ioc
security_hub_stm32/Core/Inc/: packet_parser.h  security_state.h
security_hub_stm32/Core/Src/: main.c  packet_parser.c  security_state.c
